--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
-		"react": "18.0.0",
-		"react-native": "0.69.3",
 		"@react-navigation/native": "^6.0.11",
 		"@react-navigation/native-stack": "^6.7.0",
 		"@reduxjs/toolkit": "^1.8.3",
 		"axios": "^0.27.2",
 		"formik": "^2.2.9",
+		"jwt-decode": "^3.1.2",
+		"react": "18.0.0",
+		"react-native": "0.69.3",
 		"react-native-awesome-alerts": "^2.0.0",
 		"react-native-encrypted-storage": "^4.0.2",
 		"react-native-loading-spinner-overlay": "^3.0.1",
