--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@react-navigation/native-stack": "^6.7.0",
 		"@reduxjs/toolkit": "^1.8.3",
 		"axios": "^0.27.2",
+		"axios-logger": "^2.6.1",
 		"formik": "^2.2.9",
 		"jwt-decode": "^3.1.2",
 		"react": "18.0.0",
