--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
+		"@react-navigation/material-bottom-tabs": "^6.2.2",
 		"@react-navigation/native": "^6.0.11",
 		"@react-navigation/native-stack": "^6.7.0",
 		"@reduxjs/toolkit": "^1.8.3",
+		"@types/redux-logger": "^3.0.9",
 		"axios": "^0.27.2",
 		"axios-logger": "^2.6.1",
 		"formik": "^2.2.9",
@@ -22,8 +24,10 @@
 		"react-native-awesome-alerts": "^2.0.0",
 		"react-native-encrypted-storage": "^4.0.2",
 		"react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-paper": "^4.12.4",
 		"react-native-safe-area-context": "^4.3.1",
 		"react-native-screens": "^3.15.0",
+		"react-native-vector-icons": "^9.2.0",
 		"react-redux": "^8.0.2",
 		"redux-logger": "^3.0.6",
 		"redux-saga": "^1.1.3"
@@ -35,10 +39,12 @@
 		"@tsconfig/react-native": "^2.0.2",
 		"@types/jest": "^26.0.23",
 		"@types/react-native": "^0.69.3",
+		"@types/react-native-vector-icons": "^6.4.11",
 		"@types/react-test-renderer": "^18.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
 		"babel-jest": "^26.6.3",
+		"babel-plugin-module-resolver": "^4.1.0",
 		"eslint": "^7.32.0",
 		"jest": "^26.6.3",
 		"metro-react-native-babel-preset": "^0.70.3",
