--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@react-navigation/native": "^6.0.11",
 		"@react-navigation/native-stack": "^6.7.0",
 		"@reduxjs/toolkit": "^1.8.3",
+		"@rneui/base": "^4.0.0-rc.6",
+		"@rneui/themed": "^4.0.0-rc.6",
 		"@types/redux-logger": "^3.0.9",
 		"axios": "^0.27.2",
 		"axios-logger": "^2.6.1",
@@ -23,7 +25,9 @@
 		"react-native": "0.69.3",
 		"react-native-awesome-alerts": "^2.0.0",
 		"react-native-encrypted-storage": "^4.0.2",
+		"react-native-image-picker": "^4.8.5",
 		"react-native-loading-spinner-overlay": "^3.0.1",
+		"react-native-modal": "^13.0.1",
 		"react-native-paper": "^4.12.4",
 		"react-native-safe-area-context": "^4.3.1",
 		"react-native-screens": "^3.15.0",
