--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react": "18.0.0",
 		"react-native": "0.69.3",
 		"react-native-awesome-alerts": "^2.0.0",
+		"react-native-config": "^1.4.6",
 		"react-native-encrypted-storage": "^4.0.2",
 		"react-native-image-picker": "^4.8.5",
 		"react-native-loading-spinner-overlay": "^3.0.1",
