--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"android": "npx react-native run-android",
+		"android": "npx react-native run-android --variant=developmentdebug",
 		"ios": "npx react-native run-ios",
 		"start": "react-native start",
 		"test": "jest",
-		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+		"android:staging": "npx react-native run-android --variant=stagingdebug",
+		"android:staging-release": "npx react-native run-android --variant=stagingrelease",
+		"android:dev": "npx react-native run-android --variant=developmentdebug",
+		"android:dev-release": "npx react-native run-android --variant=developmentrelease",
+		"android:prod": "npx react-native run-android --variant=productiondebug",
+		"android:prod-release": "npx react-native run-android --variant=productionrelease",
+		"ios:dev": "npx react-native run-ios --scheme \"SampleProjectDev\"",
+		"ios:staging": "npx react-native run-ios --scheme \"SampleProjectStaging\""
 	},
 	"dependencies": {
 		"@react-navigation/material-bottom-tabs": "^6.2.2",
